Revision history for {{$dist->name}}

{{$NEXT}}

1.09      2014-10-10 07:45:56 -0400
  - add Alien::patch

1.08      2014-10-09 08:37:25 -0400
  - update my dists to latest

1.07      2014-10-09 05:44:39 -0400
  - update my dists to latest

1.06      2014-10-08 14:48:47 -0400
  - added Alien::LibYAML
  - update my dists to latest  

1.05      2014-10-08 12:19:05 -0400
  - fix typo

1.04      2014-10-08 12:16:07 -0400
  - exclude Test::Vars on MSWin32
  - exclude WebService::LibeJournal on MSWin32
  - update my dists to latest

1.03      2014-10-08 09:04:13 -0400
  - update my dists to latest

1.02      2014-10-07 09:12:54 -0400
  - update my dists to latest

1.01      2014-09-26 04:14:05 -0400
  - add Alien::nasm
  - add Alien::gmake

1.00      2014-09-23 15:48:44 -0400
  - rm Mojolicious::Plugin::SslAuth

0.99      2014-09-22 15:58:17 -0400
  - add Photography::EV (Perl 5.20 or better only)
  - updated my dists to latest

0.98      2014-09-11 17:12:58 -0400
  - updated my dists to latest
  - added Term::EditLine2

0.97      2014-09-11 15:16:03 -0400
  - fixed versions for Acme::Ford::Prefect::FFI and Acme::Ford::Prefect

0.96      2014-09-11 15:11:16 -0400
  - added Acme::Ford::Prefect::FFI
  - added Alien::FFI
  - added Alien::Editline

0.95      2014-09-11 14:09:33 -0400
  - added Acme::Alien::DontPanic
  - added Acme::Ford::Prefect

0.94      2014-09-11 13:42:50 -0400
  - added Alien::Base

0.93      2014-09-09 16:36:02 -0400
  - update my dists to latest

0.92      2014-09-09 16:33:53 -0400
  - update my dists to latest

0.91      2014-08-05 13:24:38 -0400
  - update my dists to latest

0.90      2014-08-05 08:21:29 -0400
  - update my dists to latest

0.89      2014-08-05 07:24:28 -0400
  - update my dists to latest

0.88      2014-08-04 17:03:11 -0400
  - add AnyEvent::FTP
  - update my dists to latest

0.87      2014-07-29 05:55:47 -0400
  - rm Dist::Zilla::Plugin::TwitterBootstrap
  - rm WebService::TwitterBootstrap::Download::Custom
